# computer-networks

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  computer_networks  main.cpp  simulation-template.c  template.toml
scenarios/a/: 0.1.toml  0.2.toml  0.3.toml  0.4.toml  0.5.toml  0.6.toml  0.7.toml  0.8.toml  0.9.toml  1.0.toml  1.1.toml  README.md
scenarios/b/: 0.1.spq.toml  0.1.wfq.toml  0.2.spq.toml  0.2.wfq.toml  0.3.spq.toml  0.3.wfq.toml  0.4.spq.toml  0.4.wfq.toml  0.5.spq.toml  0.5.wfq.toml  0.6.spq.toml  0.6.wfq.toml  0.7.spq.toml  0.7.wfq.toml  0.8.spq.toml  0.8.wfq.toml  0.9.spq.toml  0.9.wfq.toml
scenarios/c/: 0.1.toml  0.2.toml  0.3.toml  0.4.toml  0.5.toml  0.6.toml  0.7.toml  0.8.toml  0.9.toml
scenarios/d/: 0.1.spq.toml  0.1.wfq.toml  0.2.spq.toml  0.2.wfq.toml  0.3.spq.toml  0.3.wfq.toml  0.4.spq.toml  0.4.wfq.toml  0.5.spq.toml  0.5.wfq.toml  0.6.spq.toml  0.6.wfq.toml  0.7.spq.toml  0.7.wfq.toml  0.8.spq.toml  0.8.wfq.toml  0.9.spq.toml  0.9.wfq.toml
src/: audio.h  cdf.cpp  cdf.h  config.cpp  config.h  data.h  event.cpp  event.h  fifo.cpp  fifo.h  packet.h  queue.cpp  queue.h  runtime.h  source.cpp  source.h  utils.cpp  utils.h  video.h
